--- a/wordrank/package.json
+++ b/wordrank/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rankle",
+  "name": "wordrank",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
     "@starknet-react/core": "^1.0.4",
+    "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
     "get-starknet": "^3.0.1",
-    "next": "13.1.6",
+    "next": "13.4.19",
+    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "starknet": "^5.14.1"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "typescript": "4.9.5"
+    "starknet": "^5.14.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
